# MIPS-codec

./: .gitignore  LICENSE  README.md  encoding.py  pyproject.toml  question.md
example/: assemble.txt  binary.txt
output/: binary.txt
src/: codec.py  core.py  instructions.csv  model.py
src/mips_codec/: codec.py  core.py  encoding.py  instructions.csv  model.py
tests/: test_main_func.py
